fixed cv overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@
 	padding-left: 40px;
 	overflow: scroll;
 }
-#image {
+.image {
 	float: left;
 	margin-left: 130px;
 	margin-top: 100px;
